--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Category</a></li>
                 <li><a href="#">About Me</a></li>
-                <li><img src="../../HTML_KR_CSS/Photo/Icon.png" alt="IconSearch"><a href="#">Search</a></li>
+                <li><img src="Photo/Icon.png" alt="IconSearch"><a href="#">Search</a></li>
             </ul>
-            <button class="Buymeacoffee"><img src="../../HTML_KR_CSS/Photo/buymeacoffee.png" alt="Buymeacoffee"><a href="#">buy Me a Coffee</a></button>
+            <button class="Buymeacoffee"><img src="Photo/buymeacoffee.png" alt="Buymeacoffee"><a href="#">buy Me a Coffee</a></button>
         </nav>
     </div>
 </header>
@@ -42,7 +42,7 @@
                 <input class="submit" type="submit" value="Subscribe">
             </form>
         </div>
-        <img src="../../HTML_KR_CSS/Photo/boy.png" alt="Boy">
+        <img src="Photo/boy.png" alt="Boy">
     </div>
 </main>
 <section class="category">
@@ -55,7 +55,7 @@
             <div class="card">
                 <div class="cardin">
                     <div class="imgcard">
-                        <img src="../../HTML_KR_CSS/Photo/Frame291.png" alt="CardCSS">
+                        <img src="Photo/Frame291.png" alt="CardCSS">
                     </div>
                     <p><a href="#">CSS</a></p>
                 </div>
@@ -63,7 +63,7 @@
             <div class="card">
                 <div class="cardin">
                     <div class="imgcard">
-                        <img src="../../HTML_KR_CSS/Photo/Frame298.png" alt="CardJS">
+                        <img src="Photo/Frame298.png" alt="CardJS">
                     </div>
                     <p><a href="#">javascript</a></p>
                 </div>
@@ -71,7 +71,7 @@
             <div class="card">
                 <div class="cardin">
                     <div class="imgcard">
-                        <img src="../../HTML_KR_CSS/Photo/logos_tailwindcss-icon.png" alt="CardTAILWIND">
+                        <img src="Photo/logos_tailwindcss-icon.png" alt="CardTAILWIND">
                     </div>
                     <p><a href="#">Tailwind</a></p>
                 </div>
@@ -79,7 +79,7 @@
             <div class="card">
                 <div class="cardin">
                     <div class="imgcard">
-                        <img src="../../HTML_KR_CSS/Photo/Frame292.png" alt="CardVUEJS">
+                        <img src="Photo/Frame292.png" alt="CardVUEJS">
                     </div>
                     <p><a href="#">Vue JS</a></p>
                 </div>
@@ -87,7 +87,7 @@
             <div class="card">
                 <div class="cardin">
                     <div class="imgcard">
-                        <img src="../../HTML_KR_CSS/Photo/logos_react.png" alt="CardREACT">
+                        <img src="Photo/logos_react.png" alt="CardREACT">
                     </div>
                     <p><a href="#">React JS</a></p>
                 </div>
@@ -106,11 +106,11 @@
                 <a href="#">
                     <article class="article_card">
                         <div class="cardin_article_top">
-                            <img src="../../HTML_KR_CSS/Photo/Article_Image4.png" alt="Article_Image_REDBOOK">
+                            <img src="Photo/Article_Image4.png" alt="Article_Image_REDBOOK">
                             <p>Fundamental of javascript</p>
                         </div>
                         <div class="cardin_article_bottom">
-                            <img src="../../HTML_KR_CSS/Photo/Author.png" alt="Author">
+                            <img src="Photo/Author.png" alt="Author">
                             <div>
                                 <p>Dasteen</p>
                                 <p>Jan 10, 2022     <b>&#8226;</b>       3 min read</p>
@@ -121,11 +121,11 @@
                 <a href="#">
                     <article class="article_card">
                     <div class="cardin_article_top">
-                        <img src="../../HTML_KR_CSS/Photo/Article_Image3.png" alt="Article_Image_computer">
+                        <img src="Photo/Article_Image3.png" alt="Article_Image_computer">
                         <p>Grid CSS make your life easier</p>
                     </div>
                     <div class="cardin_article_bottom">
-                        <img src="../../HTML_KR_CSS/Photo/Author.png" alt="Author">
+                        <img src="Photo/Author.png" alt="Author">
                         <div>
                             <p>Dasteen</p>
                             <p>Jan 10, 2022     <b>&#8226;</b>    3 min read</p>
@@ -136,11 +136,11 @@
                 <a href="#">
                     <article class="article_card">
                     <div class="cardin_article_top">
-                        <img src="../../HTML_KR_CSS/Photo/Article_Image2.png" alt="Article_Image_toggle_with_CSS">
+                        <img src="Photo/Article_Image2.png" alt="Article_Image_toggle_with_CSS">
                         <p>Make animated light mode and dark mode toggle with CSS</p>
                     </div>
                     <div class="cardin_article_bottom">
-                        <img src="../../HTML_KR_CSS/Photo/Author.png" alt="Author">
+                        <img src="Photo/Author.png" alt="Author">
                         <div>
                             <p>Dasteen</p>
                             <p>Jan 10, 2022     <b>&#8226;</b>      3 min read</p>
@@ -151,11 +151,11 @@
                 <a href="#">
                     <article class="article_card">
                         <div class="cardin_article_top">
-                            <img src="../../HTML_KR_CSS/Photo/Article_Image.png" alt="Article_Image_tic_tac_toe_games">
+                            <img src="Photo/Article_Image.png" alt="Article_Image_tic_tac_toe_games">
                             <p>Make tic tac toe games with react JS</p>
                         </div>
                         <div class="cardin_article_bottom">
-                            <img src="../../HTML_KR_CSS/Photo/Author.png" alt="Author">
+                            <img src="Photo/Author.png" alt="Author">
                             <div>
                                 <p>Dasteen</p>
                                 <p>Jan 10, 2022     <b>&#8226;</b>      3 min read</p>
@@ -174,11 +174,11 @@
                 <a href="#">
                     <article class="article_card">
                     <div class="cardin_article_top">
-                        <img src="../../HTML_KR_CSS/Photo/1Article_Image.png" alt="Article_Image_Flexbox_CSS">
+                        <img src="Photo/1Article_Image.png" alt="Article_Image_Flexbox_CSS">
                         <p>Flexbox cSS : Everything you need to know</p>
                     </div>
                     <div class="cardin_article_bottom">
-                        <img src="../../HTML_KR_CSS/Photo/Author.png" alt="Author">
+                        <img src="Photo/Author.png" alt="Author">
                         <div>
                             <p>Dasteen</p>
                             <p>Jan 10, 2022     <b>&#8226;</b>      3 min read</p>
@@ -189,11 +189,11 @@
                 <a href="#">
                     <article class="article_card">
                         <div class="cardin_article_top">
-                            <img src="../../HTML_KR_CSS/Photo/Article_Image3.png" alt="Article_Image_computer">
+                            <img src="Photo/Article_Image3.png" alt="Article_Image_computer">
                             <p>Grid CSS make your life easier</p>
                         </div>
                         <div class="cardin_article_bottom">
-                            <img src="../../HTML_KR_CSS/Photo/Author.png" alt="Author">
+                            <img src="Photo/Author.png" alt="Author">
                             <div>
                                 <p>Dasteen</p>
                                 <p>Jan 10, 2022     <b>&#8226;</b>      3 min read</p>
@@ -204,11 +204,11 @@
                 <a href="#">
                     <article class="article_card">
                     <div class="cardin_article_top">
-                        <img src="../../HTML_KR_CSS/Photo/2Article_Image.png" alt="Article_Image_laptor">
+                        <img src="Photo/2Article_Image.png" alt="Article_Image_laptor">
                         <p>3 easy way to make div center</p>
                     </div>
                     <div class="cardin_article_bottom">
-                        <img src="../../HTML_KR_CSS/Photo/Author.png" alt="Author">
+                        <img src="Photo/Author.png" alt="Author">
                         <div>
                             <p>Dasteen</p>
                             <p>Jan 10, 2022     <b>&#8226;</b>      3 min read</p>
@@ -219,11 +219,11 @@
                 <a href="#">
                     <article class="article_card">
                     <div class="cardin_article_top">
-                        <img src="../../HTML_KR_CSS/Photo/Article_Image2.png" alt="Article_Image_toggle_with_CSS">
+                        <img src="Photo/Article_Image2.png" alt="Article_Image_toggle_with_CSS">
                         <p>Make animated light mode and dark mode toggle with CSS</p>
                     </div>
                     <div class="cardin_article_bottom">
-                        <img src="../../HTML_KR_CSS/Photo/Author.png" alt="Author">
+                        <img src="Photo/Author.png" alt="Author">
                         <div>
                             <p>Dasteen</p>
                             <p>Jan 10, 2022     <b>&#8226;</b>      3 min read</p>
@@ -242,11 +242,11 @@
                 <a href="#">
                     <article class="article_card">
                     <div class="cardin_article_top">
-                        <img src="../../HTML_KR_CSS/Photo/3Article_Image.png" alt="Article_Image_array_in_javasript">
+                        <img src="Photo/3Article_Image.png" alt="Article_Image_array_in_javasript">
                         <p>array in javasript - Learn JS #3</p>
                     </div>
                     <div class="cardin_article_bottom">
-                        <img src="../../HTML_KR_CSS/Photo/Author.png" alt="Author">
+                        <img src="Photo/Author.png" alt="Author">
                         <div>
                             <p>Dasteen</p>
                             <p>Jan 10, 2022     <b>&#8226;</b>      3 min read</p>
@@ -257,11 +257,11 @@
                 <a href="#">
                     <article class="article_card">
                     <div class="cardin_article_top">
-                        <img src="../../HTML_KR_CSS/Photo/Article_Image4.png" alt="Article_Image_redbook">
+                        <img src="Photo/Article_Image4.png" alt="Article_Image_redbook">
                         <p>Fundamental of javascript</p>
                     </div>
                     <div class="cardin_article_bottom">
-                        <img src="../../HTML_KR_CSS/Photo/Author.png" alt="Author">
+                        <img src="Photo/Author.png" alt="Author">
                         <div>
                             <p>Dasteen</p>
                             <p>Jan 10, 2022     <b>&#8226;</b>      3 min read</p>
@@ -272,11 +272,11 @@
                 <a href="#">
                     <article class="article_card">
                     <div class="cardin_article_top">
-                        <img src="../../HTML_KR_CSS/Photo/4Article_Image.png" alt="Article_Image_computer">
+                        <img src="Photo/4Article_Image.png" alt="Article_Image_computer">
                         <p>7 project with javascript you must try for your portfolio</p>
                     </div>
                     <div class="cardin_article_bottom">
-                        <img src="../../HTML_KR_CSS/Photo/Author.png" alt="Author">
+                        <img src="Photo/Author.png" alt="Author">
                         <div>
                             <p>Dasteen</p>
                             <p>Jan 10, 2022     <b>&#8226;</b>      3 min read</p>
@@ -287,11 +287,11 @@
                 <a href="#">
                     <article class="article_card">
                     <div class="cardin_article_top">
-                        <img src="../../HTML_KR_CSS/Photo/5Article_Image.png" alt="Article_Image_phone">
+                        <img src="Photo/5Article_Image.png" alt="Article_Image_phone">
                         <p>make simple calculator with javascript</p>
                     </div>
                     <div class="cardin_article_bottom">
-                        <img src="../../HTML_KR_CSS/Photo/Author.png" alt="Author">
+                        <img src="Photo/Author.png" alt="Author">
                         <div>
                             <p>Dasteen</p>
                             <p>Jan 10, 2022     <b>&#8226;</b>      3 min read</p>
@@ -310,11 +310,11 @@
                 <a href="#">
                     <article class="article_card">
                     <div class="cardin_article_top">
-                        <img src="../../HTML_KR_CSS/Photo/8Article_Image.png" alt="Article_Image_laptor">
+                        <img src="Photo/8Article_Image.png" alt="Article_Image_laptor">
                         <p>first month of leaning react jS</p>
                     </div>
                     <div class="cardin_article_bottom">
-                        <img src="../../HTML_KR_CSS/Photo/Author.png" alt="Author">
+                        <img src="Photo/Author.png" alt="Author">
                         <div>
                             <p>Dasteen</p>
                             <p>Jan 10, 2022     <b>&#8226;</b>      3 min read</p>
@@ -325,11 +325,11 @@
                 <a href="#">
                     <article class="article_card">
                     <div class="cardin_article_top">
-                        <img src="../../HTML_KR_CSS/Photo/7Article_Image.png" alt="Article_Image_computer">
+                        <img src="Photo/7Article_Image.png" alt="Article_Image_computer">
                         <p>build markdown editor with react JS</p>
                     </div>
                     <div class="cardin_article_bottom">
-                        <img src="../../HTML_KR_CSS/Photo/Author.png" alt="Author">
+                        <img src="Photo/Author.png" alt="Author">
                         <div>
                             <p>Dasteen</p>
                             <p>Jan 10, 2022     <b>&#8226;</b>      3 min read</p>
@@ -340,11 +340,11 @@
                 <a href="#">
                     <article class="article_card">
                     <div class="cardin_article_top">
-                        <img src="../../HTML_KR_CSS/Photo/6Article_Image.png" alt="Article_Image_code">
+                        <img src="Photo/6Article_Image.png" alt="Article_Image_code">
                         <p>getting started with react JS</p>
                     </div>
                     <div class="cardin_article_bottom">
-                        <img src="../../HTML_KR_CSS/Photo/Author.png" alt="Author">
+                        <img src="Photo/Author.png" alt="Author">
                         <div>
                             <p>Dasteen</p>
                             <p>Jan 10, 2022     <b>&#8226;</b>      3 min read</p>
@@ -355,11 +355,11 @@
                 <a href="#">
                     <article class="article_card">
                     <div class="cardin_article_top">
-                        <img src="../../HTML_KR_CSS/Photo/Article_Image.png" alt="Article_Image_tic_tac_toe_games">
+                        <img src="Photo/Article_Image.png" alt="Article_Image_tic_tac_toe_games">
                         <p>Make tic tac toe games with react JS</p>
                     </div>
                     <div class="cardin_article_bottom">
-                        <img src="../../HTML_KR_CSS/Photo/Author.png" alt="Author">
+                        <img src="Photo/Author.png" alt="Author">
                         <div>
                             <p>Dasteen</p>
                             <p>Jan 10, 2022     <b>&#8226;</b>      3 min read</p>
@@ -374,7 +374,7 @@
 </section>
 <section class="subscribe">
     <div class="div_subscribe w1250px">
-        <div class="ellipse"><img src="../../HTML_KR_CSS/Photo/Mask_Group.png" alt="mailbox"></div>
+        <div class="ellipse"><img src="Photo/Mask_Group.png" alt="mailbox"></div>
         <div class="subscribe_text">
             <h3>Subscribe For the lastest updates</h3>
             <p>Subscribe to newsletter and never miss the new post every week.</p>
@@ -391,10 +391,10 @@
             <h2>Dasteen<span>.Blog</span></h2>
             <p>Digitaldastin by Dastin Darmawan</p>
             <div class="logos">
-                <img src="../../HTML_KR_CSS/Photo/Medium%20Monogram.png" alt="Medium">
-                <img src="../../HTML_KR_CSS/Photo/Vector.png" alt="Vector">
-                <img src="../../HTML_KR_CSS/Photo/instagram.png" alt="Instagram">
-                <img src="../../HTML_KR_CSS/Photo/linkedin.png" alt="Linkedin">
+                <img src="Photo/Medium%20Monogram.png" alt="Medium">
+                <img src="Photo/Vector.png" alt="Vector">
+                <img src="Photo/instagram.png" alt="Instagram">
+                <img src="Photo/linkedin.png" alt="Linkedin">
             </div>
         </div>
         <div class="footer_links">
